[branch-2.9] Fix cherry-pick issue (#17894)
* Verify branch-2.9 CI

* [branch-2.9] Fix cherry-pick issue